# dns

./: Cargo.toml  GEMINI.md  dns.service  dns.toml  dns.toml.bak  get_lists.sh  justfile
.cargo/: config.toml
benches/: config_benchmark.rs
plans/: 2025-07-02_plan.md  tcp_test.md
src/: block_filter.rs  config.rs  dns_cache.rs  dot_client.rs  lib.rs  main.rs  server.rs  web.rs  web_ui.rs
src/tests/unit_tests/: config.rs  dns_cache.rs  mod.rs  process_dns_request.rs  server.rs
src/web/: dot.rs  local_domains.rs
src/web_ui/: dot.rs  local_domains.rs  local_network.rs  mod.rs  nameservers.rs
static/css/: style.css
templates/: base.html  config_edit.html  config_view.html  dot_table.html  edit_blocklists.html  edit_dot.html  edit_local_domains.html  edit_local_network.html  edit_nameservers.html  edit_options.html  index.html  local_domains_table.html  local_network_table.html  nameservers_table.html
tests/unit_tests/: config.rs
