[package]
name = "dns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
futures = "0.3"
simple-dns = "0.11"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald = "0.3.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bench]]
name = "config_benchmark"
harness = false

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dns"
path = "src/main.rs"

[features]
default = []
