[package]
name = "dns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
foldhash = "0.2"
futures = "0.3"
simple-dns = "0.11"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
rustls-pki-types = "1"
webpki-roots = "1"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald = "0.3"
axum = "0.8"
askama = { version = "0.14" }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bench]]
name = "config_benchmark"
harness = false

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dns"
path = "src/main.rs"

[[bin]]
name = "dns-web"
path = "src/web_ui.rs"

[features]
default = []
